# IronFish

./: .README.md.swp  IMG_0548.HEIC  README.md
iceira_gazebo/: CMakeLists.txt  README.md  package.xml
iceira_gazebo/doc/: useful_object_list.txt
iceira_gazebo/launch/: iceira320.launch  iceira_all_furniture.launch  iceira_all_raw.launch  iceira_icps.launch  iceira_icps_demo_multipleSpawn.launch
iceira_gazebo/meshes/: willie_home.STL
iceira_gazebo/objects/: apple_juice_box.urdf  assembly_area.urdf  basmati_rice.urdf  bed.urdf  beer_hofbraeu.urdf  beer_rothaus.urdf  blanket_colored.urdf  blanket_white.urdf  book_death.urdf  book_emancipation.urdf  book_gardening.urdf  book_heilkrauter.urdf  book_journal_brown.urdf  book_pferdewitze.urdf  book_romantiker.urdf  book_set_buecherschau.urdf  box_wicker.urdf  box_wood.urdf  cabinet_diamondback.urdf  cabinet_ikea_galant.urdf  cabinet_ikea_kallax_4x2.urdf  cage_box.urdf  (+67 more)
ironfish_description/: CMakeLists.txt  README.md  package.xml
ironfish_gazebo/: CMakeLists.txt  README.md  package.xml
ironfish_hardware/: README.md
ironfish_install/: README.md
ironfish_navigation/: CMakeLists.txt  README.md  package.xml
ironfish_ros_control/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  package.xml
ironfish_sensors/: CMakeLists.txt  README.md  package.xml
ironfish_uart/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt  README.md  package.xml
simple_node/: CMakeLists.txt  package.xml
teb_local_planner_optimal/: CMakeLists.txt  package.xml
teb_local_planner_optimal/src/: reset_costmap.cpp  service_test.cpp
(+143 files in other folders)
